feat(frontend): add dashboard and login for admin

--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@skills-base/shared": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "helmet": "^8.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
