--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@skills-base/shared": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "google-auth-library": "^9.14.2",
     "helmet": "^8.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
