--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,111 @@
-# Environment variables
-.env
-.env.local
-
 # Dependencies
 node_modules
+.pnp
+.pnp.js
+.npm
+.yarn-integrity
 
-# Build outputs
+# Testing
+coverage
+.nyc_output
+
+# Next.js specific
+.next/
+out/
+build
 dist
+.swc/
+
+# Nest.js specific
+dist/
+*.tsbuildinfo
+
+# Production
+build/
+public/build/
+storybook-static
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Local env files
+.env
+.env*.local
+.env.development
+.env.test
+.env.production
+
+# Vercel
+.vercel
+.turbo
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# IDE - IntelliJ
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# IDE - WebStorm
+.idea/
+.idea_modules/
+
+# macOS
+.DS_Store
+*.pem
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+[Dd]esktop.ini
 
 # Logs
+logs
 *.log
 
-# Docker volumes
-docker-volumes
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# IDE specific files
-.vscode
-.idea
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# n8n
-.n8n
+# Optional cache directories
+.npm
+.eslintcache
+.stylelintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.node_repl_history
+
+# Build outputs
+*.tgz
+.output
+.nuxt
+.nitro
+.cache
+.docusaurus
+
+# Temp directories
+tmp/
+temp/
+.temp
