feat(email-service): initial setup for email service with MailHog integration
Set up the email service with Nodemailer to send emails using MailHog for local development. Configure the service to handle email templates and basic SMTP connection.

- Initialized Nodemailer with MailHog for local email testing
- Added functionality to load and send email templates.

--- a/docker/compose.infra.yml
+++ b/docker/compose.infra.yml
@@ -22,6 +22,12 @@ services:
       - N8N_BASIC_AUTH_PASSWORD=password
     volumes:
       - n8n_data:/home/node/.n8n
+  
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "1025:1025"
+      - "8025:8025"
 
 volumes:
   mongodb_data:
