--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "lerna": "^8.1.8",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "nodemailer": "^6.9.15"
   }
 }
