feat(skills-service): add upsert API for Self Skill Assessments
Implements bulk upsert functionality in the  SkillsAssessments service to update or insert skill data from
self assessments based on unique email identifiers. This change allows for efficient management
of skills data by ensuring that updates are reflected accurately in the database.

- Modified SelfSkillsDto to accept a map of skills and levels directly.
- Updated SelfSkills entity to use a map for skills representation.
- Ensured unique email index for efficient upsert operations.
- Enhanced error handling and logging during batch processing.

--- a/packages/skills-service/tsconfig.json
+++ b/packages/skills-service/tsconfig.json
@@ -6,16 +6,21 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
+    "strict": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
-  }
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@skills-base/shared": ["../shared/dist"]
+    },
+    "types": ["@types/babel__core", "jest"]
+  },
+  "exclude": ["node_modules", "dist"]
 }
