fix(taxonomy-endpoint): fix shared/commons issue & update dto, entity

--- a/packages/skills-service/tsconfig.json
+++ b/packages/skills-service/tsconfig.json
@@ -16,6 +16,19 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
-  }
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@skills-base/shared": [
+        "../shared/dist"
+      ]
+    },
+    "types": [
+      "@types/babel__core",
+      "jest"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
