--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "semi": true,
+  "trailingComma": "all",
   "singleQuote": true,
+  "printWidth": 100,
   "tabWidth": 2,
-  "printWidth": 80,
-  "trailingComma": "es5",
   "arrowParens": "avoid"
 }
