--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "google-auth-library": "^9.14.2",
     "helmet": "^8.0.0",
+    "mongodb": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
@@ -44,6 +45,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
