feat(email-service): add authorization and fix dto

--- a/packages/email-service/tsconfig.json
+++ b/packages/email-service/tsconfig.json
@@ -16,6 +16,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@skills-base/shared": ["../shared/dist"]
+    }
   }
 }
