--- a/packages/email-service/tsconfig.json
+++ b/packages/email-service/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@skills-base/shared": ["../shared/dist"]
+      "@skills-base/shared": ["../shared/dist"],
+      "@skills-base/user-service": ["../user-service/dist"]
     }
   }
 }
