--- a/packages/skills-service/tsconfig.json
+++ b/packages/skills-service/tsconfig.json
@@ -20,6 +20,9 @@
     "paths": {
       "@skills-base/shared": [
         "../shared/dist"
+      ],
+      "@skills-base/user-service": [
+        "../user-service/dist"
       ]
     },
     "types": [
