--- a/packages/learning-service/package.json
+++ b/packages/learning-service/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/mongodb": "^4.0.6",
+    "mongodb": "^6.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
