--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,7 +20,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.15.1",
     "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -28,35 +27,23 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/throttler": "^6.2.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cors": "^2.8.5",
-    "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^8.0.0",
-    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.7.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "uuid": "^10.0.0",
-    "winston": "^3.16.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "winston-elasticsearch": "^0.11.0",
-    "xss": "^1.0.15"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
-    "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.2",
-    "@types/mongo-sanitize": "^1.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.0",
