--- a/packages/learning-service/package.json
+++ b/packages/learning-service/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@skills-base/shared": "^1.0.0",
     "@types/mongodb": "^4.0.6",
     "mongodb": "^6.10.0",
     "reflect-metadata": "^0.2.0",
