--- a/packages/learning-service/tsconfig.json
+++ b/packages/learning-service/tsconfig.json
@@ -16,6 +16,11 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@skills-base/shared": ["../shared/dist"]
+    },
+    "types": ["@types/babel__core", "jest"]
+  },
+  "exclude": ["node_modules", "dist"]
 }
