--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -44,6 +44,7 @@
     "uuid": "^10.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "winston-loki": "^6.1.3",
     "winston-transport": "^4.9.0"
   },
   "devDependencies": {
