--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -5,23 +5,23 @@ global:
 scrape_configs:
   - job_name: 'user_service'
     static_configs:
-      - targets: ['10.1.16.194:3001']
+      - targets: ['172.31.220.111:3001']
 
-  - job_name: 'skills_service'
-    static_configs:
-      - targets: ['10.1.16.194:3002']
+  # - job_name: 'skills_service'
+  #   static_configs:
+  #     - targets: ['172.31.220.111:3002']
 
-  - job_name: 'learning_service'
-    static_configs:
-      - targets: ['10.1.16.194:3003']
+  # - job_name: 'learning_service'
+  #   static_configs:
+  #     - targets: ['172.31.220.111:3003']
 
   - job_name: 'email_service'
     static_configs:
-      - targets: ['10.1.16.194:3005']
+      - targets: ['172.31.220.111:3005']
 
-  - job_name: 'event_proceesses-service'
-    static_configs:
-      - targets: ['10.1.16.194:3006']
+  # - job_name: 'event_proceesses-service'
+  #   static_configs:
+  #     - targets: ['172.31.220.111:3006']
 
   - job_name: 'prometheus'
     static_configs:
