fix(frontend): address limited searching issue, address ui component issues, fix frontend pagination

--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.4"
   }
 }
