--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lerna": "^8.1.2",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "shadcn-ui": "^0.9.3",
     "typescript": "~5.3.3"
   },
   "lint-staged": {
@@ -36,5 +37,9 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2"
   }
 }
