--- a/packages/email-service/package.json
+++ b/packages/email-service/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.0.7",
     "@skills-base/shared": "file:../shared",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
