--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.0.7",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "cache-manager": "^5.7.6",
