--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,2 +1,3 @@
 GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=your_secure_password
+GRAFANA_ADMIN_PASSWORD=admin1234
+SERVICE_HOST=172.16.207.249 # Get this from ip addr show 2
