--- a/docker/prometheus/prometheus.yml.template
+++ b/docker/prometheus/prometheus.yml.template
@@ -5,19 +5,19 @@ global:
 scrape_configs:
   - job_name: 'user_service'
     static_configs:
-      - targets: ['172.16.207.249:3001']
+      - targets: ['${SERVICE_HOST}:3001']
   - job_name: 'skills_service'
     static_configs:
-      - targets: ['172.16.207.249:3002']
+      - targets: ['${SERVICE_HOST}:3002']
   - job_name: 'learning_service'
     static_configs:
-      - targets: ['172.16.207.249:3003']
+      - targets: ['${SERVICE_HOST}:3003']
   - job_name: 'email_service'
     static_configs:
-      - targets: ['172.16.207.249:3005']
+      - targets: ['${SERVICE_HOST}:3005']
   - job_name: 'event_processes_service'
     static_configs:
-      - targets: ['172.16.207.249:3006']
+      - targets: ['${SERVICE_HOST}:3006']
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
