--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "fast-uri": "^3.0.3",
     "husky": "^8.0.0",
     "lerna": "^8.1.2",
     "lint-staged": "^15.2.2",
