--- a/packages/integration-service/package.json
+++ b/packages/integration-service/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.9",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/websockets": "^10.4.9",
     "@skills-base/shared": "^1.0.0",
     "reflect-metadata": "^0.2.0",
