--- a/docker/grafana/provisioning/alerting/contact_points.yml
+++ b/docker/grafana/provisioning/alerting/contact_points.yml
@@ -13,5 +13,5 @@ contactPoints:
               "value": "test",
               "description": "test"
             }
-          url: http://192.168.203.84:3005/email/grafananotif
+          url: http://${SERVICE_HOST}/email/grafananotif
           disableResolveMessage: false
