fix(shared): env and app module updates to all services

--- a/packages/integration-service/.env.example
+++ b/packages/integration-service/.env.example
@@ -32,12 +32,12 @@ GOOGLE_MAX_TOKEN_AGE=300
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=1000
-RATE_LIMIT_SKIP_PATHS=/health,/metrics
+RATE_LIMIT_SKIP_PATHS=/health,/metrics,/swagger,/swagger/json
 
 # API Key Settings
 API_KEY_ENABLED=false
 API_KEYS=your_api_key_1,your_api_key_2
-API_KEY_EXCLUDE_PATHS=/health,/metrics,/auth/login,/auth/register
+API_KEY_EXCLUDE_PATHS=/health,/metrics,/swagger./swagger/json
 
 # IP Whitelist
 IP_WHITELIST_ENABLED=false
@@ -49,12 +49,12 @@ IP_BLOCK_DURATION=3600000
 MAX_PAYLOAD_SIZE=10485760
 
 # CORS Settings
-CORS_ORIGINS=http://localhost:3001,https://yourdomain.com
+CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
 
 # Logging Configuration
 LOG_LEVEL=info
 LOG_FORMAT=json
-LOG_OUTPUTS=console,file
+LOG_OUTPUTS=console,loki
 LOG_SKIP_PATHS=/health,/metrics
 
 # Monitoring Configuration
