--- a/packages/skills-service/.env.example
+++ b/packages/skills-service/.env.example
@@ -10,38 +10,32 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@your-cluster.mongodb.net/your_database
+MONGODB_URI=mongodb+srv://webdevuser:webdevuser123@cluster0.mz1u4.mongodb.net/skills_base_platform_skills_service
 
 # Message Queue Configuration
 RABBITMQ_URL=amqp://localhost:5672
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=your_jwt_secret
 JWT_EXPIRATION=3600
 JWT_AUDIENCE=your-audience
-
-# Google OAuth Configuration
-GOOGLE_CLIENT_ID=your_client_id_here
-GOOGLE_CLIENT_SECRET=your_client_secret_here
-GOOGLE_ALLOWED_DOMAINS=yourdomain.com
-GOOGLE_REQUIRE_VERIFIED_EMAIL=true
-GOOGLE_MAX_TOKEN_AGE=300
 
 # Security Settings
 # Rate Limiting
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=1000
-RATE_LIMIT_SKIP_PATHS=/health,/metrics
+RATE_LIMIT_SKIP_PATHS=/health,/metrics,/swagger,/swagger/json
 
 # API Key Settings
 API_KEY_ENABLED=false
 API_KEYS=your_api_key_1,your_api_key_2
-API_KEY_EXCLUDE_PATHS=/health,/metrics,/auth/login,/auth/register
+API_KEY_EXCLUDE_PATHS=/health,/metrics,/swagger./swagger/json
+
 
 # IP Whitelist
 IP_WHITELIST_ENABLED=false
-ALLOWED_IPS=127.0.0.1,::1
+ALLOWED_IPS=127.0.0.1,::1,0.0.0.0
 IP_MAX_FAILED_ATTEMPTS=5
 IP_BLOCK_DURATION=3600000
 
@@ -49,7 +43,7 @@ IP_BLOCK_DURATION=3600000
 MAX_PAYLOAD_SIZE=10485760
 
 # CORS Settings
-CORS_ORIGINS=http://localhost:3001,https://yourdomain.com
+CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
 
 # Logging Configuration
 LOG_LEVEL=info
