--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
