--- a/docker/grafana/provisioning/alerting/contact_points.yml.template
+++ b/docker/grafana/provisioning/alerting/contact_points.yml.template
@@ -13,5 +13,5 @@ contactPoints:
               "value": "test",
               "description": "test"
             }
-          url: http://${SERVICE_HOST}/email/grafananotif
+          url: http://${SERVICE_HOST}:3005/email/grafananotif
           disableResolveMessage: false
